# scrapper

./: CMakeLists.txt  Mon deuxieme site.html  conf_funcs.c  conf_funcs.h  config.sconf  main.c  sCrapper  scrap_funcs.c  scrap_funcs.h
parser/: parser.c  parser.h  struct.c  struct.h  struct_src.c  struct_src.h
parser/docTemp/: css.txt
parser/webSiteAssets/: test.js
